# quickserve

./: LICENSE  Main.hs  README.md  quickserve.cabal
