Name:               QuickServe
Version:            0.1
Synopsis:           A quick static web server
License:            BSD3
License-file:       LICENSE
Copyright: CC BY-SA 3.0
Author:             Shawn Morel
Maintainer:         shawn@strangemonad.com
Category:           Web
Build-type:         Simple
Extra-source-files: README.md
Cabal-version:      >=1.2


Executable quickserve
  Main-is: Main.hs
  Build-depends: base       >= 4       && < 5
               , directory  >= 1.1     && < 1.2
               , bytestring >= 0.9     && < 1.0
               , http-types >= 0.6.9   && < 0.7
               , wai        >= 1.1     && < 1.2
               , warp       >= 1.1.0.1 && < 1.2

